src/translationFillerStyle.css
/* ... */
    .confirm-button:focus {
        outline: 0;
    }

.cancel-button {
    min-width: 100px;
    height: 35px;
    border-radius: 20px;
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    font-size: 15px;
    color: white;
    border: none;
    cursor: pointer;
    padding: 0;
    line-height: 1.6;
    transition: background 0.5s;
    padding: 0 15px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

    .cancel-button:focus {
        outline: 0;
    }

@keyframes open-toast {
    0% {
        transform: scaleX(1) scaleY(1);
    }

    20%, 45% {
        transform: scaleX(1.35) scaleY(0.1);
    }

    65% {
        transform: scaleX(0.8) scaleY(1.7);
    }

    80% {
        transform: scaleX(0.6) scaleY(0.85);
    }

    100% {
        transform: scaleX(1) scaleY(1);
    }
}

.toast-container {
    top: 15px;
    right: 15px;
    min-width: 250px;
    overflow: hidden;
    position: fixed;
    border-radius: 5px;
    box-shadow: 0 0 20px rgb(0, 0, 0, 0.2);
    animation: open-toast 0.3s linear;
    z-index: 999999;
}

.toast-frame {
    padding: 5px 5px;
    display: flex;
    min-width: 100px;
    height: 60px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    align-items: center ;
    flex-wrap: wrap;
}

.toast-img {
    height: 40px;
}

.toast-message {
    font-size: 14px !important;
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-size: 15px;
    color: #fff;
    margin-left: 10px;
}

.toast-close {
    color: rgb(0, 0, 0, 0.2);
    font-family: "Dosis", sans-serif;
    font-weight: 700;
    font-size: 16px;
    cursor: pointer;
    transition: color 0.5s;
    margin-left: 20px;
}

@keyframes timer {
    0% {
        width: 100%;
    }

    25% {
        width: 75%;
    }

    50% {
        width: 50%;
    }

    75% {
        width: 25%;
    }

    100% {
        width: 1%;
    }
}

.toast-timer {
    width: 1%;
    height: 5px;
}

.toast-close:hover {
    color: rgb(0, 0, 0, 0.5);
}

.error-bg {
    background: #d85261;
}

.success-bg {
    background: #2dd284;
}

.warning-bg {
    background: #fada5e;
}

.question-bg {
    background: #779ecb;
}

.error-btn:hover {
    background: #e5a4b4;
}

.success-btn:hover {
    background: #6edaa4;
}

.warning-btn:hover {
    background: #fcecae;
}

.info-btn:hover {
    background: #c3e6fb;
}

.question-btn:hover {
    background: #bacee4;
}

.error-timer {
    background: #e5a4b4;
}

.success-timer {
    background: #6edaa4;
}

.warning-timer {
    background: #fcecae;
}

.info-timer {
    background: #c3e6fb;
}

.info-bg {
    background: #88cef7;
}

/** End of cuteAlert **/
.panel-header__bubble--waiting {
    color: #000000 !important;
    border-color: #000000 !important;
}

table.translations tr.preview.wptf-translated {
    background-color: #FFFFC2;
}

.highlight {
    background: lightpink;
}
/*Below code needs to be removed if GlotPress has improved the template*/
.editor-panel__right {
    flex: 0 0 19rem !important;
   /* min-width: 1%;*/
}

/* Tooltip container */
.tooltip {
    position: relative;
    display: inline-block;
    background-color: #0085ba;
    color: white;
    padding-right: 3px;
    padding-left: 3px;
    min-width: 40px;
    height: 35px;
    border: 1px solid #ccc;
    /* Other styles here */
}

    /* Tooltip text */
    .tooltip .tooltiptext {
        visibility: hidden;
        width: 120px;
        background-color: #0085ba;
        color: #fff;
        text-align: center;
        padding: 5px 0;
        border-radius: 6px;
        /* Position the tooltip text */
        position: absolute;
        z-index: 1;
        bottom: 125%;
        left: 50%;
        margin-left: -60px;
        /* Fade in tooltip */
        opacity: 0;
        transition: opacity 0.3s;
    }

        /* Tooltip arrow */
        .tooltip .tooltiptext::after {
            content: "";
            position: absolute;
            top: 100%;
            left: 50%;
            margin-left: -5px;
            border-width: 5px;
            border-style: solid;
            border-color: #555 transparent transparent transparent;
        }

    /* Show the tooltip text when you mouse over the tooltip container */
    .tooltip:hover .tooltiptext {
        visibility: visible;
        opacity: 1;
    }

@keyframes blinking {
    0% {
        background-color: #ff3d50;
        border: 2px solid #6565f2;
    }
    /* YOU CAN ADD MORE COLORS IN THE KEYFRAMES IF YOU WANT
  50% {
    background-color: #55d66b;
    border: 5px solid #126620;
  }
  */
    100% {
        background-color: #0085ba;
        border: 2px solid #fff;
    }
}
/*After Glotpress has improved remove this footer change  */
.wp-block-group.global-footer {
     padding-bottom: 12px !important; 
     padding-top: 12px !important; 
}

table.translations td.myCheckBox {
    text-align: center;
    border: 1px solid #72777c;
    border-top: 1px solid #72777c;
    border-bottom: 1px solid #72777c;
    border-right: 1px solid #72777c;
    display: table-cell !important;
    color:black;
}
table.translations th.thCheckBox {
    width: 3em !important;
    display: table-cell !important;
    font-size: 14px !important;
    text-align: center !important;
    vertical-align: middle !important;
    font-weight: 700 !important;
    padding: 0px !important;
}

